--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </style>
 </head>
 <body>
+        <audio autoplay loop>
+        <source src="1.MainTheme-320bit.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
     <img id="ball" src="PngItem_2373133.png" alt="img">
     <img id="brick" src="images.jpg" alt="img">
     <canvas id="gameScreen"></canvas>
