--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-        <audio autoplay loop>
+        <audio autoplay loop preload="auto">
         <source src="1.MainTheme-320bit.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
